# CashFriend

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_transactions.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
db/: init.sql  seed.csv
