[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cashfriend-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
]
